<?xml version="1.0" encoding="utf-8"?>
<!-- Menu do "+" no Carbon UI: linhas geométricas, sem botões arredondados. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/carbon_surface_raised"
    android:orientation="vertical"
    android:paddingStart="@dimen/carbon_gutter"
    android:paddingTop="@dimen/carbon_space_lg"
    android:paddingEnd="@dimen/carbon_gutter"
    android:paddingBottom="@dimen/carbon_space_lg">

    <com.example.myapplication.ui.carbon.CarbonSectionTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title" />

    <TextView
        android:id="@+id/optionManual"
        style="@style/Carbon.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_md"
        android:text="@string/add_manual" />

    <TextView
        style="@style/Carbon.Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_xs"
        android:text="@string/carbon_option_manual_hint" />

    <TextView
        android:id="@+id/optionRefuel"
        style="@style/Carbon.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_sm"
        android:text="@string/add_refuel" />

    <TextView
        style="@style/Carbon.Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_xs"
        android:text="@string/carbon_option_refuel_hint" />

    <TextView
        android:id="@+id/optionImport"
        style="@style/Carbon.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_sm"
        android:text="@string/add_import" />

    <TextView
        style="@style/Carbon.Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_xs"
        android:text="@string/carbon_option_import_hint" />

    <TextView
        android:id="@+id/optionPhoto"
        style="@style/Carbon.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_sm"
        android:text="@string/add_photo" />

    <TextView
        style="@style/Carbon.Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_xs"
        android:text="@string/carbon_option_photo_hint" />

    <TextView
        android:id="@+id/optionPdf"
        style="@style/Carbon.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_sm"
        android:text="@string/add_pdf" />

    <TextView
        style="@style/Carbon.Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_xs"
        android:text="@string/carbon_option_pdf_hint" />

    <TextView
        android:id="@+id/optionXml"
        style="@style/Carbon.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_sm"
        android:text="@string/add_xml" />

    <TextView
        style="@style/Carbon.Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/carbon_space_xs"
        android:text="@string/carbon_option_xml_hint" />
</LinearLayout>
