<?xml version="1.0" encoding="utf-8"?>
<!-- Importar nota fiscal no Carbon UI. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/carbon_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Carbon.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/import_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/carbon_gutter"
        android:paddingEnd="@dimen/carbon_gutter">

        <TextView
            style="@style/Carbon.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_subtitle"
            android:textSize="15sp" />

        <com.example.myapplication.ui.carbon.CarbonSectionTitle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_lg"
            android:text="@string/carbon_import_source" />

        <TextView
            android:id="@+id/buttonXml"
            style="@style/Carbon.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_md"
            android:text="@string/import_xml" />

        <TextView
            android:id="@+id/buttonPdf"
            style="@style/Carbon.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_sm"
            android:text="@string/import_pdf" />

        <TextView
            android:id="@+id/buttonPhoto"
            style="@style/Carbon.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_sm"
            android:text="@string/import_photo" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/carbon_space_lg"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/carbon_cyan"
            app:indicatorSize="24dp"
            app:trackThickness="2dp" />

        <TextView
            android:id="@+id/textStatus"
            style="@style/Carbon.Text.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_md" />
    </LinearLayout>
</LinearLayout>
