<?xml version="1.0" encoding="utf-8"?>
<!-- Boas-vindas no Carbon UI: sem card, sem botão pill. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/carbon_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/carbon_gutter"
        android:paddingTop="@dimen/carbon_space_lg"
        android:paddingEnd="@dimen/carbon_gutter"
        android:paddingBottom="@dimen/carbon_space_lg">

        <com.example.myapplication.ui.carbon.CarbonSectionTitle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="64dp"
            android:layout_height="@dimen/carbon_rule"
            android:background="@color/carbon_cyan" />

        <TextView
            style="@style/Carbon.Text.Display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_lg"
            android:text="@string/welcome_title" />

        <TextView
            style="@style/Carbon.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/carbon_space_md"
            android:text="@string/welcome_subtitle"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/buttonStart"
            style="@style/Carbon.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_start" />
    </LinearLayout>
</LinearLayout>
